# home

./: .gitignore  Dockerfile  _pipes_pkg  agent  bashrc  devtime  easyserv  init  license  masqs  package.json  powshrc  profile  pwshrc  readme  saywords  server.example.json
.home/: Dockerfile  aliases  bashrc  funs  init  profile  profile.ps1  pwshrc  zshrc
Minecraft/: bedrock.md
Scripts/: cfgutil  customutil  dpipi  play  valorantutil
Servers/: profile
Source/: joy.cfg  source.cfg
Source2/: scraps.cfg  source2.cfg
bats/: batsh.bat  const.bat  dis.bat  dpipi.bat  fw2.bat  lsdrv.bat  lspci.bat  mobo.bat  stats.bat  why.bat
blobman/: blobman
bouncer/: Package.swift
collect/: hashmap
conf/: masqs
gitsh/: g  ps1
kotlins/: .gitignore
lib/: profile
movies/: pubspec.yaml
pipes/: kpipe.kts  luapipe  nodepipe  ps1pipe  rubypipe
planet/: Cargo.toml  readme
planet/src/: client.rs  player.rs
play/: profile
playground/server/: Cargo.toml  nginx.conf
playground/server/src/api/: service.rs
playground/server/src/db/: connection_sqlx.rs  listener_sqlx.rs  model.rs  util_sqlx.rs
playground/web/: Cargo.toml  Makefile
playground/web/src/: lib.rs
rando/: mssql.Dockerfile  viberename.go
randoandroid/: build.gradle.kts
save/: motion.net.conf
scancoder/: readme
shed/: readme.md
shell/: git-force-test
source/: dev  home  os  shell
stash/: stash
teamline/: readme.md
win/: base64.ps1  batt.bat  batt.ps1  brbaro.ps1  cscfg.bat  cscfg.ps1  dpipi.ps1  fw.bat  httpserv.ps1  iddqd.ps1  intreverse.ps1  lshw.ps1  lsusb.ps1  mux.ps1  nics.ps1  pax.ps1  pkg.bat  pow.bat  powsh.bat  readme  (+14 more)
(+708 files in other folders)
