[package]
name = "rusty_planet"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
tokio = { version = "1.27.0", features = ["full", "tracing"] }
tokio-util = { version = "0.7.7", features = ["full"] }
bytes = "1.4.0"
futures = "0.3.0"
fps_clock = "2.0.0"
uuid = { version = "1.3.0", features = ["v4"] }
rand = "0.8.5"
single_value_channel = "1.2.1"

[[example]]
name = "client"
path = "src/client.rs"
