[package]
version = "0.1.0"
name = "web"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.10.0"
rusty_playground_client = { version = "*", path = "../client" }
rusty_playground_model = { version = "*", path = "../model" }
#serde_json = "1.0.96"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
